--- a/nifi-extension-bundles/nifi-azure-bundle/nifi-azure-parameter-providers/pom.xml
+++ b/nifi-extension-bundles/nifi-azure-bundle/nifi-azure-parameter-providers/pom.xml
@@ -50,5 +50,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-core-http-jdk-httpclient</artifactId>
+        </dependency>
     </dependencies>
 </project>
